tests/baselines/reference/typeParameterDiamond4(strict=true).errors.txt
typeParameterDiamond4.ts(8,13): error TS2322: Type 'Top | T | U' is not assignable to type 'Top'.
  'Top' could be instantiated with an arbitrary type which could be unrelated to 'Top | T | U'.
typeParameterDiamond4.ts(8,19): error TS2454: Variable 'middle' is used before being assigned.
typeParameterDiamond4.ts(9,22): error TS2454: Variable 'bottom' is used before being assigned.
typeParameterDiamond4.ts(10,13): error TS2322: Type 'Bottom' is not assignable to type 'Top'.
  'Top' could be instantiated with an arbitrary type which could be unrelated to 'Bottom'.
typeParameterDiamond4.ts(10,19): error TS2454: Variable 'bottom' is used before being assigned.


==== typeParameterDiamond4.ts (5 errors) ====
    function diamondTop<Top>() {
        function diamondMiddle<T, U>() {
            function diamondBottom<Bottom extends Top | T | U>() {
                var top: Top;
                var middle: Top | T | U;
                var bottom: Bottom;
    
                top = middle;
                ~~~
!!! error TS2322: Type 'Top | T | U' is not assignable to type 'Top'.
!!! error TS2322:   'Top' could be instantiated with an arbitrary type which could be unrelated to 'Top | T | U'.
!!! related TS2208 typeParameterDiamond4.ts:2:28: This type parameter might need an `extends Top` constraint.
                      ~~~~~~
!!! error TS2454: Variable 'middle' is used before being assigned.
                middle = bottom;
                         ~~~~~~
!!! error TS2454: Variable 'bottom' is used before being assigned.
                top = bottom;
                ~~~
!!! error TS2322: Type 'Bottom' is not assignable to type 'Top'.
!!! error TS2322:   'Top' could be instantiated with an arbitrary type which could be unrelated to 'Bottom'.
                      ~~~~~~
!!! error TS2454: Variable 'bottom' is used before being assigned.
            }
        }
    }